background theme supported.

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="bar"><div style="float: right"><a href="https://mail.google.com/" target="_blank">Gmail</a>&nbsp; <a href="https://wx.qq.com/" target="_blank">WeChat</a>&nbsp; <a href="https://www.v2ex.com" target="_blank">V2EX</a>&nbsp; <a href="https://www.twitter.com/" target="_blank">Twitter</a>&nbsp; <a href="https://www.xiami.com/" target="_blank">Xiami</a></div>
 
-		<strong style="color: #999">Cabinw Start Page</strong>
+		<a href="/"><strong style="color: #999">Cabinw Start Page</strong></a>
 		<div class="sep"></div>
 		<form target="_blank" method="get" action="http://www.google.com/search">
 			<table align="center">
