--- a/start.html
+++ b/start.html
@@ -41,9 +41,9 @@
 </head>
 <body>
 	<div class="bar">
-		<div style="float: right"><a href="https://mail.google.com/" target="_blank">Gmail</a>&nbsp; <a href="https://wx.qq.com/" target="_blank">WeChat</a>&nbsp; <a href="https://www.v2ex.com" target="_blank">V2EX</a>&nbsp; <a href="https://www.twitter.com/" target="_blank">Twitter</a>&nbsp; <a href="https://www.xiami.com/" target="_blank">Xiami</a>&nbsp; <a href="login.html" target="Admin">Login</a>
+		<div style="float: right"><a href="https://mail.google.com/" target="_blank">Gmail</a>&nbsp; <a href="https://wx.qq.com/" target="_blank">WeChat</a>&nbsp; <a href="https://www.v2ex.com" target="_blank">V2EX</a>&nbsp; <a href="https://www.twitter.com/" target="_blank">Twitter</a>&nbsp; <a href="https://www.xiami.com/" target="_blank">Xiami</a>&nbsp; <a href="/login">Login</a>
 		</div>
-		<strong style="color: #999">Cabinw Start Page</strong>
+		<a href="/"><strong style="color: #999">Cabinw Start Page</strong></a>
 		<div class="sep"></div>
 		<form target="_blank" method="get" action="http://www.google.com/search">
 		<input type="hidden" name="forid" value="1" />
